--- a/Challenge Resources/ETL_clean_wiki_movies.ipynb
+++ b/Challenge Resources/ETL_clean_wiki_movies.ipynb
@@ -28,10 +28,43 @@
    "source": [
     "# 1. Add the clean movie function that takes in the argument, \"movie\".\n",
     "def clean_movie(movie):\n",
+    "    movie = dict(movie) #create a non-destructive copy\n",
+    "    alt_titles = {}\n",
+    "    # combine alternate titles into one list\n",
+    "    for key in ['Also known as','Arabic','Cantonese','Chinese','French',\n",
+    "                'Hangul','Hebrew','Hepburn','Japanese','Literally',\n",
+    "                'Mandarin','McCune-Reischauer','Original title','Polish',\n",
+    "                'Revised Romanization','Romanized','Russian',\n",
+    "                'Simplified','Traditional','Yiddish']:\n",
+    "        if key in movie:\n",
+    "            alt_titles[key] = movie[key]\n",
+    "            movie.pop(key)\n",
+    "    if len(alt_titles) > 0:\n",
+    "        movie['alt_titles'] = alt_titles\n",
     "\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    # merge column names\n",
+    "    def change_column_name(old_name, new_name):\n",
+    "        if old_name in movie:\n",
+    "            movie[new_name] = movie.pop(old_name)\n",
+    "    change_column_name('Adaptation by', 'Writer(s)')\n",
+    "    change_column_name('Country of origin', 'Country')\n",
+    "    change_column_name('Directed by', 'Director')\n",
+    "    change_column_name('Distributed by', 'Distributor')\n",
+    "    change_column_name('Edited by', 'Editor(s)')\n",
+    "    change_column_name('Length', 'Running time')\n",
+    "    change_column_name('Original release', 'Release date')\n",
+    "    change_column_name('Music by', 'Composer(s)')\n",
+    "    change_column_name('Produced by', 'Producer(s)')\n",
+    "    change_column_name('Producer', 'Producer(s)')\n",
+    "    change_column_name('Productioncompanies ', 'Production company(s)')\n",
+    "    change_column_name('Productioncompany ', 'Production company(s)')\n",
+    "    change_column_name('Released', 'Release Date')\n",
+    "    change_column_name('Release Date', 'Release date')\n",
+    "    change_column_name('Screen story by', 'Writer(s)')\n",
+    "    change_column_name('Screenplay by', 'Writer(s)')\n",
+    "    change_column_name('Story by', 'Writer(s)')\n",
+    "    change_column_name('Theme music composer', 'Composer(s)')\n",
+    "    change_column_name('Written by', 'Writer(s)')\n",
     "\n",
     "    return movie"
    ]
@@ -45,15 +78,20 @@
     "# 2 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def function_name():\n",
+    "def extract_transform_load():\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
+    "    kaggle_metadata = pd.read_csv(f'{file_dir}movies_metadata.csv', low_memory=False)\n",
+    "    ratings = pd.read_csv(f'{file_dir}ratings.csv')\n",
     "    \n",
-    "\n",
     "    # Open and read the Wikipedia data JSON file.\n",
-    "    \n",
+    "    with open(f'{file_dir}/wikipedia-movies.json', mode='r') as file:\n",
+    "        wiki_movies_raw = json.load(file)\n",
     "    \n",
     "    # 3. Write a list comprehension to filter out TV shows.\n",
-    "    \n",
+    "    wiki_movies = [movie for movie in wiki_movies_raw\n",
+    "               if ('Director' in movie or 'Directed by' in movie)\n",
+    "                   and 'imdb_link' in movie\n",
+    "                   and 'No. of episodes' not in movie]\n",
     "\n",
     "    # 4. Write a list comprehension to iterate through the cleaned wiki movies list\n",
     "    # and call the clean_movie function on each movie.\n",
@@ -182,9 +220,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.11"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
