--- a/Challenge Resources/ETL_function_test.ipynb
+++ b/Challenge Resources/ETL_function_test.ipynb
@@ -216,7 +216,7 @@
     "file_dir = \"./DATA/\" \n",
     "\n",
     "# Wikipedia data\n",
-    "wiki_file = f'{file_dir}/wikipedia_movies.json'\n",
+    "wiki_file = f'{file_dir}/wikipedia.movies.json'\n",
     "\n",
     "# Kaggle metadata\n",
     "kaggle_file = f'{file_dir}/movies_metadata.csv'\n",
